cargo-features = ["edition2024"]

[package]
name = "pcr-util"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry", "std"] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
camino = { version = "1", features = ["serde1"] }

[[bin]]
name = "pcr-util"
