cargo-features = ["edition2024"]

[package]
name = "pcr-util"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = { version = "1", features = ["serde1"] }
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
itertools = "0.13"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "pcr-util"
